--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -54,7 +54,7 @@
     <div class="logo">
         <img src="/img/logo.webp" alt="Logo">
     </div>
-    <form th:action="@{/login}" method="post">
+    <form th:action="@{/admin}" method="post">
         <div th:if="${error}" style="color: red; margin-bottom: 10px;">
             Invalid email or password. Please try again.
         </div>
