--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -59,7 +59,7 @@
             Invalid email or password. Please try again.
         </div>
         <label>
-            <input type="email" name="username" placeholder="Email" required>
+            <input type="text" name="username" placeholder="Email" required>
         </label>
         <label>
             <input type="password" name="password" placeholder="Password" required>
