Added username check.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -54,7 +54,7 @@
     <div class="logo">
         <img src="/img/logo.webp" alt="Logo">
     </div>
-    <h1>You are logged in.</h1>
+    <h2>Welcome <div th:text="${username}"></div></h2>
     <form th:action="@{/logout}" method="POST">
         <button type="submit">Logout</button>
     </form>
