--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -68,7 +68,7 @@
     </div>
     <form th:action="@{/login}" method="POST">
         <label>
-            <input type="text" name="username" placeholder="Username" required>
+            <input type="email" name="username" placeholder="E-mail" required>
         </label>
         <label>
             <input type="password" name="password" placeholder="Password" required>
