Working basic return.

--- a/src/main/resources/templates/client/come-in-and-find-out.html
+++ b/src/main/resources/templates/client/come-in-and-find-out.html
@@ -49,7 +49,7 @@
             </h2>
             <div th:id="'collapse' + ${category}" class="accordion-collapse collapse" th:aria-labelledby="'heading' + ${category}" data-bs-parent="#crudTables">
                 <div class="accordion-body">
-                    <form th:action="@{'/home/' + ${category}}" method="post" enctype="multipart/form-data" onsubmit="return filterCheckedRows(this)">
+                    <form th:action="@{'/come-in-and-find-out/' + ${category}}" method="post" enctype="multipart/form-data" onsubmit="return filterCheckedRows(this)">
                         <button class="btn btn-primary mb-2" type="button" th:attr="onclick='addRow(\'' + ${category} + '\')'">Add</button>
                         <table class="table table-bordered">
                             <thead>
@@ -64,7 +64,7 @@
                             </tr>
                             </thead>
                             <tbody th:id="'tableBody' + ${category}">
-                            <tr th:each="item : ${items[category]}" th:classappend="${item.markedForDeletion} ? 'hidden-row' : ''">
+                            <tr th:each="item : ${items['__${category}__']}">
                                 <td>
                                     <input type="checkbox" name="update" class="update-checkbox">
                                     <input type="hidden" name="delete" value="false">
