Only adding new item is not working.

--- a/src/main/resources/templates/client/come-in-and-find-out.html
+++ b/src/main/resources/templates/client/come-in-and-find-out.html
@@ -64,32 +64,34 @@
                             </tr>
                             </thead>
                             <tbody th:id="'tableBody' + ${category}">
-                            <tr th:each="item : ${items['__${category}__']}">
+                            <tr th:each="item, iter: ${items['__${category}__']}">
                                 <td>
-                                    <input type="checkbox" name="update" class="update-checkbox">
-                                    <input type="hidden" name="delete" value="false">
+                                    <input type="checkbox" th:name="|items[${iter.index}].update|" class="update-checkbox">
+                                    <input type="hidden" id="delete" th:name="|items[${iter.index}].delete|" value="false">
+                                    <input type="hidden" th:name="|items[${iter.index}].id|" th:value="${item.id}">
                                 </td>
-                                <td><textarea class="form-control" name="description" rows="2" th:text="${item.description}"></textarea></td>
+                                <td>
+                                    <textarea class="form-control" th:name="|items[${iter.index}].description|" rows="2" th:text="${item.description}"></textarea>
+                                </td>
                                 <td>
                                     <img th:src="${item.image1}" class="thumbnail" th:if="${item.image1}">
-                                    <input type="file" name="image1" class="form-control file-upload-button">
+                                    <input type="file" th:name="|items[${iter.index}].image1|" class="form-control file-upload-button">
                                 </td>
                                 <td>
                                     <img th:src="${item.image2}" class="thumbnail" th:if="${item.image2}">
-                                    <input type="file" name="image2" class="form-control file-upload-button">
+                                    <input type="file" th:name="|items[${iter.index}].image2|" class="form-control file-upload-button">
                                 </td>
                                 <td>
                                     <img th:src="${item.image3}" class="thumbnail" th:if="${item.image3}">
-                                    <input type="file" name="image3" class="form-control file-upload-button">
+                                    <input type="file" th:name="|items[${iter.index}].image3|" class="form-control file-upload-button">
                                 </td>
                                 <td>
                                     <img th:src="${item.image4}" class="thumbnail" th:if="${item.image4}">
-                                    <input type="file" name="image4" class="form-control file-upload-button">
+                                    <input type="file" th:name="|items[${iter.index}].image4|" class="form-control file-upload-button">
                                 </td>
                                 <td>
                                     <button class="btn btn-danger" type="button" onclick="markForDeletion(this)">X</button>
                                 </td>
-                                <input type="hidden" name="id" th:value="${item.id}">
                             </tr>
                             </tbody>
                         </table>
@@ -107,27 +109,41 @@
         const tableBody = document.getElementById('tableBody' + category);
         const newRow = document.createElement('tr');
         newRow.innerHTML = `
-                <td>
-                    <input type="checkbox" name="update" class="update-checkbox">
-                    <input type="hidden" name="delete" value="false">
-                </td>
-                <td><textarea class="form-control" name="description" rows="2"></textarea></td>
-                <td><input type="file" name="image1" class="form-control file-upload-button"></td>
-                <td><input type="file" name="image2" class="form-control file-upload-button"></td>
-                <td><input type="file" name="image3" class="form-control file-upload-button"></td>
-                <td><input type="file" name="image4" class="form-control file-upload-button"></td>
-                <td>
-                    <button class="btn btn-danger" type="button" onclick="markForDeletion(this)">X</button>
-                </td>
-                <input type="hidden" name="id" value="">
-            `;
+        <td>
+            <input type="checkbox" th:name="|items[${iter.index}].update|" class="update-checkbox">
+            <input type="hidden" id="delete" th:name="|items[${iter.index}].delete|" value="false">
+            <input type="hidden" th:name="|items[${iter.index}].id|" th:value="${item.id}">
+        </td>
+        <td>
+            <textarea class="form-control" th:name="|items[${iter.index}].description|" rows="2" th:text="${item.description}"></textarea>
+        </td>
+        <td>
+            <img th:src="${item.image1}" class="thumbnail" th:if="${item.image1}">
+            <input type="file" th:name="|items[${iter.index}].image1|" class="form-control file-upload-button">
+        </td>
+        <td>
+            <img th:src="${item.image2}" class="thumbnail" th:if="${item.image2}">
+            <input type="file" th:name="|items[${iter.index}].image2|" class="form-control file-upload-button">
+        </td>
+        <td>
+            <img th:src="${item.image3}" class="thumbnail" th:if="${item.image3}">
+            <input type="file" th:name="|items[${iter.index}].image3|" class="form-control file-upload-button">
+        </td>
+        <td>
+            <img th:src="${item.image4}" class="thumbnail" th:if="${item.image4}">
+            <input type="file" th:name="|items[${iter.index}].image4|" class="form-control file-upload-button">
+        </td>
+        <td>
+            <button class="btn btn-danger" type="button" onclick="markForDeletion(this)">X</button>
+        </td>
+        `;
         tableBody.appendChild(newRow);
     }
 
     function markForDeletion(button) {
         const row = button.closest('tr');
         row.querySelector('.update-checkbox').checked = true;
-        row.querySelector('input[name="delete"]').value = "true";
+        row.querySelector('input[id="delete"]').value = "true";
         row.classList.add('hidden-row');
     }
 
