--- a/src/main/resources/templates/client/come-in-and-find-out.html
+++ b/src/main/resources/templates/client/come-in-and-find-out.html
@@ -66,8 +66,8 @@
                             <tbody th:id="'tableBody' + ${category}">
                             <tr th:each="item, iter: ${items['__${category}__']}">
                                 <td>
-                                    <input type="checkbox" th:name="|items[${iter.index}].update|" class="update-checkbox">
-                                    <input type="hidden" id="delete" th:name="|items[${iter.index}].delete|" value="false">
+                                    <input type="checkbox" class="update-checkbox">
+                                    <input type="hidden" id="delete" th:name="|items[${iter.index}].delete|">
                                     <input type="hidden" th:name="|items[${iter.index}].id|" th:value="${item.id}">
                                 </td>
                                 <td>
@@ -107,31 +107,29 @@
 <script>
     function addRow(category) {
         const tableBody = document.getElementById('tableBody' + category);
+        const tableSize = tableBody.querySelectorAll('tr').length;
+        console.log("Table size:" + tableSize);
         const newRow = document.createElement('tr');
         newRow.innerHTML = `
         <td>
-            <input type="checkbox" th:name="|items[${iter.index}].update|" class="update-checkbox">
-            <input type="hidden" id="delete" th:name="|items[${iter.index}].delete|" value="false">
-            <input type="hidden" th:name="|items[${iter.index}].id|" th:value="${item.id}">
+            <input type="checkbox" class="update-checkbox">
+            <input type="hidden" id="delete" name="items[${tableSize}].delete">
+            <input type="hidden" name="items[${tableSize}].id">
         </td>
         <td>
-            <textarea class="form-control" th:name="|items[${iter.index}].description|" rows="2" th:text="${item.description}"></textarea>
+            <textarea class="form-control" name="items[${tableSize}].description" rows="2"></textarea>
         </td>
         <td>
-            <img th:src="${item.image1}" class="thumbnail" th:if="${item.image1}">
-            <input type="file" th:name="|items[${iter.index}].image1|" class="form-control file-upload-button">
+            <input type="file" name="items[${tableSize}].image1" class="form-control file-upload-button">
         </td>
         <td>
-            <img th:src="${item.image2}" class="thumbnail" th:if="${item.image2}">
-            <input type="file" th:name="|items[${iter.index}].image2|" class="form-control file-upload-button">
+            <input type="file" name="items[${tableSize}].image2" class="form-control file-upload-button">
         </td>
         <td>
-            <img th:src="${item.image3}" class="thumbnail" th:if="${item.image3}">
-            <input type="file" th:name="|items[${iter.index}].image3|" class="form-control file-upload-button">
+            <input type="file" name="items[${tableSize}].image3" class="form-control file-upload-button">
         </td>
         <td>
-            <img th:src="${item.image4}" class="thumbnail" th:if="${item.image4}">
-            <input type="file" th:name="|items[${iter.index}].image4|" class="form-control file-upload-button">
+            <input type="file" name="items[${tableSize}].image4" class="form-control file-upload-button">
         </td>
         <td>
             <button class="btn btn-danger" type="button" onclick="markForDeletion(this)">X</button>
