--- a/src/main/resources/templates/client/come-in-and-find-out.html
+++ b/src/main/resources/templates/client/come-in-and-find-out.html
@@ -10,19 +10,23 @@
             display: block;
             margin: auto;
         }
+
         td:nth-child(2) {
             width: 25%;
         }
+
         .thumbnail {
             display: block;
-            max-width: 256px;
-            max-height: 256px;
+            width: 196px;
+            height: 110px;
             margin: 5px auto;
         }
+
         .file-upload-button {
             display: block;
             width: 100%;
         }
+
         .title-image {
             display: block;
             margin: 0 auto 20px;
@@ -31,13 +35,18 @@
             max-width: 100%;
             height: auto;
         }
+
+        .custom-container {
+            min-width: 1300px;
+        }
+
         .hidden-row {
             display: none;
         }
     </style>
 </head>
 <body>
-<div class="container mt-4">
+<div class="container mt-4 custom-container">
     <img src="/img/client/come-in-and-find-out.webp" alt="" class="title-image">
 
     <div class="accordion" id="crudTables">
@@ -71,23 +80,27 @@
                                     <input type="hidden" th:name="|items[${iter.index}].id|" th:value="${item.id}">
                                 </td>
                                 <td>
-                                    <textarea class="form-control" th:name="|items[${iter.index}].description|" rows="8" th:text="${item.description}"></textarea>
+                                    <textarea class="form-control" th:name="|items[${iter.index}].description|" rows="6" th:text="${item.description}"></textarea>
                                 </td>
                                 <td>
-                                    <img th:src="'data:image/jpeg;base64,' + ${item.image1Base64}" class="thumbnail" th:if="${item.image1Base64 != null}">
-                                    <input type="file" th:name="|items[${iter.index}].image1|" class="form-control file-upload-button">
+                                    <img th:src="'data:image/jpeg;base64,' + ${item.image1Base64}" class="thumbnail">
+                                    <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
+                                    <input type="file" th:name="|items[${iter.index}].image1|" class="form-control d-none" onchange="updateButtonText(this)">
                                 </td>
                                 <td>
-                                    <img th:src="'data:image/jpeg;base64,' + ${item.image2Base64}" class="thumbnail" th:if="${item.image2Base64 != null}">
-                                    <input type="file" th:name="|items[${iter.index}].image2|" class="form-control file-upload-button">
+                                    <img th:src="'data:image/jpeg;base64,' + ${item.image2Base64}" class="thumbnail">
+                                    <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
+                                    <input type="file" th:name="|items[${iter.index}].image2|" class="form-control d-none" onchange="updateButtonText(this)">
                                 </td>
                                 <td>
-                                    <img th:src="'data:image/jpeg;base64,' + ${item.image3Base64}" class="thumbnail" th:if="${item.image3Base64 != null}">
-                                    <input type="file" th:name="|items[${iter.index}].image3|" class="form-control file-upload-button">
+                                    <img th:src="'data:image/jpeg;base64,' + ${item.image3Base64}" class="thumbnail" >
+                                    <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
+                                    <input type="file" th:name="|items[${iter.index}].image3|" class="form-control d-none" onchange="updateButtonText(this)">
                                 </td>
                                 <td>
-                                    <img th:src="'data:image/jpeg;base64,' + ${item.image4Base64}" class="thumbnail" th:if="${item.image4Base64 != null}">
-                                    <input type="file" th:name="|items[${iter.index}].image4|" class="form-control file-upload-button">
+                                    <img th:src="'data:image/jpeg;base64,' + ${item.image4Base64}" class="thumbnail">
+                                    <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
+                                    <input type="file" th:name="|items[${iter.index}].image4|" class="form-control d-none" onchange="updateButtonText(this)">
                                 </td>
                                 <td>
                                     <button class="btn btn-danger" type="button" onclick="markForDeletion(this)">X</button>
@@ -101,6 +114,19 @@
             </div>
         </div>
     </div>
+    <div id="warningModal" class="modal" tabindex="-1" aria-labelledby="warningModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="warningModalLabel">File Warning</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p id="warningMessage"></p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -108,7 +134,6 @@
     function addRow(category) {
         const tableBody = document.getElementById('tableBody' + category);
         const tableSize = tableBody.querySelectorAll('tr').length;
-        console.log("Table size:" + tableSize);
         const newRow = document.createElement('tr');
         newRow.innerHTML = `
         <td>
@@ -117,19 +142,27 @@
             <input type="hidden" name="items[${tableSize}].id">
         </td>
         <td>
-            <textarea class="form-control" name="items[${tableSize}].description" rows="8"></textarea>
+            <textarea class="form-control" name="items[${tableSize}].description" rows="6"></textarea>
         </td>
         <td>
-            <input type="file" name="items[${tableSize}].image1" class="form-control file-upload-button">
+            <img src="#" class="thumbnail" alt=""/>
+            <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
+            <input type="file" th:name="|items[${tableSize}].image1|" class="form-control d-none" onchange="updateButtonText(this)">
         </td>
         <td>
-            <input type="file" name="items[${tableSize}].image2" class="form-control file-upload-button">
+            <img src="#" class="thumbnail" alt=""/>
+            <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
+            <input type="file" th:name="|items[${tableSize}].image2|" class="form-control d-none" onchange="updateButtonText(this)">
         </td>
         <td>
-            <input type="file" name="items[${tableSize}].image3" class="form-control file-upload-button">
+            <img src="#" class="thumbnail" alt=""/>
+            <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
+            <input type="file" th:name="|items[${tableSize}].image3|" class="form-control d-none" onchange="updateButtonText(this)">
         </td>
         <td>
-            <input type="file" name="items[${tableSize}].image4" class="form-control file-upload-button">
+            <img src="#" class="thumbnail" alt=""/>
+            <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
+            <input type="file" th:name="|items[${tableSize}].image4|" class="form-control d-none" onchange="updateButtonText(this)">
         </td>
         <td>
             <button class="btn btn-danger" type="button" onclick="markForDeletion(this)">X</button>
@@ -154,6 +187,55 @@
             }
         });
         return true;
+    }
+
+    function selectFile(button) {
+        const fileInput = button.nextElementSibling;
+        fileInput.click();
+    }
+
+    function updateButtonText(input) {
+        const button = input.previousElementSibling;
+        const thumbnail = input.closest('td').querySelector('.thumbnail');
+        const file = input.files[0];
+
+        if (file) {
+            const fileType = file.type;
+            const fileSize = file.size;
+
+            if (fileSize > 10 * 1024 * 1024 || fileType !== 'image/jpeg') {
+                showWarningModal("The selected file must be JPEG image and no larger than 10MB.");
+
+                input.value = '';
+                thumbnail.src = '';
+                button.textContent = "Choose File";
+                button.classList.remove('btn-link');
+                return;
+            }
+
+            let fileName = file.name;
+            if (fileName.length > 16) {
+                fileName = fileName.substring(0, 16) + "...";
+            }
+            button.textContent = fileName;
+            button.classList.add('btn-link');
+
+            const reader = new FileReader();
+            reader.onload = function (e) {
+                thumbnail.src = e.target.result;
+            };
+            reader.readAsDataURL(file);
+        } else {
+            button.textContent = "Choose File";
+            button.classList.remove('btn-link');
+        }
+    }
+
+    function showWarningModal(message) {
+        const warningMessageElement = document.getElementById('warningMessage');
+        warningMessageElement.textContent = message;
+        const warningModal = new bootstrap.Modal(document.getElementById('warningModal'));
+        warningModal.show();
     }
 </script>
 </body>
