--- a/src/main/resources/templates/client/come-in-and-find-out.html
+++ b/src/main/resources/templates/client/come-in-and-find-out.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Outside Worx</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <style>
-        .update-checkbox {
-            display: block;
-            margin: auto;
-        }
-
         td:nth-child(1) {
             width: 25%;
         }
@@ -98,18 +94,18 @@
                                 </td>
                                 <td style="text-align: center;">
                                     <br>
-                                    <button class="btn btn-danger" type="button" onclick="markForDeletion(this)">X</button>
+                                    <button class="btn btn-danger" type="button" onclick="markForDeletion(this)"><i class="bi bi-trash"></i></button>
                                     <br>
                                     <br>
-                                    <input type="checkbox" class="btn-check update-checkbox" th:id="'btn-check-outlined-' + ${category} + '-' + ${iter.index}" autocomplete="off">
-                                    <label class="btn btn-outline-success" th:for="'btn-check-outlined-' + ${category} + '-' + ${iter.index}">E</label>
+                                    <input type="checkbox" class="btn-check" th:id="'btn-check-outlined-' + ${category} + '-' + ${iter.index}" autocomplete="off">
+                                    <label class="btn btn-outline-success" th:for="'btn-check-outlined-' + ${category} + '-' + ${iter.index}"><i class="bi bi-upload"></i></label>
                                     <input type="hidden" id="delete" th:name="|items[${iter.index}].delete|">
                                     <input type="hidden" th:name="|items[${iter.index}].id|" th:value="${item.id}">
                                 </td>
                             </tr>
                             </tbody>
                         </table>
-                        <button class="btn btn-success" type="submit">Save updates</button>
+                        <button class="btn btn-success" type="submit">Save changes</button>
                     </form>
                 </div>
             </div>
@@ -176,11 +172,11 @@
         </td>
         <td style="text-align: center;">
             <br>
-            <button class="btn btn-danger" type="button" onclick="markForDeletion(this)">X</button>
+            <button class="btn btn-danger" type="button" onclick="markForDeletion(this)"><i class="bi bi-trash"></i></button>
             <br>
             <br>
-            <input type="checkbox" class="btn-check update-checkbox" id="btn-check-outlined-${category}-${tableSize}" autocomplete="off">
-            <label class="btn btn-outline-success" for="btn-check-outlined-${category}-${tableSize}">E</label>
+            <input type="checkbox" class="btn-check" id="btn-check-outlined-${category}-${tableSize}" autocomplete="off">
+            <label class="btn btn-outline-success" for="btn-check-outlined-${category}-${tableSize}"><i class="bi bi-upload"></i></label>
             <input type="hidden" id="delete" name="items[${tableSize}].delete">
             <input type="hidden" name="items[${tableSize}].id">
         </td>
@@ -190,7 +186,7 @@
 
     function markForDeletion(button) {
         const row = button.closest('tr');
-        row.querySelector('.update-checkbox').checked = true;
+        row.querySelector('.btn-check').checked = true;
         row.querySelector('input[id="delete"]').value = "true";
         row.classList.add('hidden-row');
     }
@@ -198,7 +194,7 @@
     function filterCheckedRows(form) {
         const rows = form.querySelectorAll('tbody tr');
         rows.forEach(row => {
-            const checkbox = row.querySelector('.update-checkbox');
+            const checkbox = row.querySelector('.btn-check');
             if (!checkbox.checked) {
                 row.remove();
             }
