--- a/src/main/resources/templates/client/come-in-and-find-out.html
+++ b/src/main/resources/templates/client/come-in-and-find-out.html
@@ -35,10 +35,6 @@
         .custom-container {
             min-width: 1300px;
         }
-
-        .hidden-row {
-            display: none;
-        }
     </style>
 </head>
 <body>
@@ -54,7 +50,7 @@
             </h2>
             <div th:id="'collapse' + ${category}" class="accordion-collapse collapse" th:aria-labelledby="'heading' + ${category}" data-bs-parent="#crudTables">
                 <div class="accordion-body">
-                    <form th:action="@{'/come-in-and-find-out/' + ${category}}" method="post" enctype="multipart/form-data" onsubmit="return filterCheckedRows(this)">
+                    <form th:action="@{'/come-in-and-find-out/' + ${category}}" method="post" enctype="multipart/form-data">
                         <button class="btn btn-primary mb-2" type="button" th:attr="onclick='addRow(\'' + ${category} + '\')'">Add</button>
                         <table class="table table-bordered">
                             <thead>
@@ -94,12 +90,8 @@
                                 </td>
                                 <td style="text-align: center;">
                                     <br>
-                                    <button class="btn btn-danger" type="button" onclick="markForDeletion(this)"><i class="bi bi-trash"></i></button>
-                                    <br>
-                                    <br>
-                                    <input type="checkbox" class="btn-check" th:id="'btn-check-outlined-' + ${category} + '-' + ${iter.index}" autocomplete="off">
-                                    <label class="btn btn-outline-success" th:for="'btn-check-outlined-' + ${category} + '-' + ${iter.index}"><i class="bi bi-upload"></i></label>
-                                    <input type="hidden" id="delete" th:name="|items[${iter.index}].delete|">
+                                    <input type="checkbox" class="btn-check" th:name="|items[${iter.index}].delete|" th:id="'btn-check-outlined-delete-' + ${category} + '-' + ${iter.index}" autocomplete="off">
+                                    <label class="btn btn-outline-danger" th:for="'btn-check-outlined-delete-' + ${category} + '-' + ${iter.index}"><i class="bi bi-trash"></i></label>
                                     <input type="hidden" th:name="|items[${iter.index}].id|" th:value="${item.id}">
                                 </td>
                             </tr>
@@ -172,34 +164,12 @@
         </td>
         <td style="text-align: center;">
             <br>
-            <button class="btn btn-danger" type="button" onclick="markForDeletion(this)"><i class="bi bi-trash"></i></button>
-            <br>
-            <br>
-            <input type="checkbox" class="btn-check" id="btn-check-outlined-${category}-${tableSize}" autocomplete="off">
-            <label class="btn btn-outline-success" for="btn-check-outlined-${category}-${tableSize}"><i class="bi bi-upload"></i></label>
-            <input type="hidden" id="delete" name="items[${tableSize}].delete">
+            <input type="checkbox" class="btn-check" name="items[${tableSize}].delete" id="'btn-check-outlined-delete-' + ${category} + '-' + ${tableSize}" autocomplete="off">
+            <label class="btn btn-outline-danger" for="'btn-check-outlined-delete-' + ${category} + '-' + ${tableSize}"><i class="bi bi-trash"></i></label>
             <input type="hidden" name="items[${tableSize}].id">
         </td>
         `;
         tableBody.appendChild(newRow);
-    }
-
-    function markForDeletion(button) {
-        const row = button.closest('tr');
-        row.querySelector('.btn-check').checked = true;
-        row.querySelector('input[id="delete"]').value = "true";
-        row.classList.add('hidden-row');
-    }
-
-    function filterCheckedRows(form) {
-        const rows = form.querySelectorAll('tbody tr');
-        rows.forEach(row => {
-            const checkbox = row.querySelector('.btn-check');
-            if (!checkbox.checked) {
-                row.remove();
-            }
-        });
-        return true;
     }
 
     function selectFile(button) {
