Fixed initial image upload.

--- a/src/main/resources/templates/client/come-in-and-find-out.html
+++ b/src/main/resources/templates/client/come-in-and-find-out.html
@@ -145,22 +145,22 @@
         <td>
             <img src="#" class="thumbnail" alt="" data-bs-toggle="modal" data-bs-target="#imageModal"/>
             <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
-            <input type="file" th:name="|items[${tableSize}].image1|" class="form-control d-none" onchange="updateButtonText(this)">
+            <input type="file" name="items[${tableSize}].image1" class="form-control d-none" onchange="updateButtonText(this)">
         </td>
         <td>
             <img src="#" class="thumbnail" alt="" data-bs-toggle="modal" data-bs-target="#imageModal"/>
             <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
-            <input type="file" th:name="|items[${tableSize}].image2|" class="form-control d-none" onchange="updateButtonText(this)">
+            <input type="file" name="items[${tableSize}].image2" class="form-control d-none" onchange="updateButtonText(this)">
         </td>
         <td>
             <img src="#" class="thumbnail" alt="" data-bs-toggle="modal" data-bs-target="#imageModal"/>
             <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
-            <input type="file" th:name="|items[${tableSize}].image3|" class="form-control d-none" onchange="updateButtonText(this)">
+            <input type="file" name="items[${tableSize}].image3" class="form-control d-none" onchange="updateButtonText(this)">
         </td>
         <td>
             <img src="#" class="thumbnail" alt="" data-bs-toggle="modal" data-bs-target="#imageModal"/>
             <button type="button" class="btn btn-light file-upload-button" onclick="selectFile(this)">Choose File</button>
-            <input type="file" th:name="|items[${tableSize}].image4|" class="form-control d-none" onchange="updateButtonText(this)">
+            <input type="file" name="items[${tableSize}].image4" class="form-control d-none" onchange="updateButtonText(this)">
         </td>
         <td style="text-align: center;">
             <br>
