Named back banner.

--- a/src/main/resources/templates/client/come-in-and-find-out.html
+++ b/src/main/resources/templates/client/come-in-and-find-out.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 <div class="container mt-4 custom-container">
-    <img src="/img/client/come-in-and-find-out.webp-XXX" alt="" class="title-image">
+    <img src="/img/client/come-in-and-find-out.webp" alt="" class="title-image">
 
     <div class="accordion" id="crudTables">
         <div th:each="category : ${categories}" class="accordion-item">
